[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Diamond.gd" type="Script" id=1]
[ext_resource path="res://Assets/Audio/CoinPickup/coin_pickup_0.wav" type="AudioStream" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 12 )

[node name="Diamond" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CoinPickupAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="CollisionArea" type="Area2D" parent="."]

[node name="Collider" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2( 1, 0 )
shape = SubResource( 1 )
[connection signal="finished" from="CoinPickupAudio" to="." method="_on_CoinPickupAudio_finished"]
[connection signal="body_entered" from="CollisionArea" to="." method="_on_body_entered"]
